--- a/templates/cart.html
+++ b/templates/cart.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <!-- Feadtued Categories -->
-{% include 'product_list.html' %}
+{% include 'cart_container.html' %}
 
 {% endblock content %}
