--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <!-- Feadtued Categories -->
-{% include 'product_list.html' %}
+{% include 'product_description.html' %}
 
 {% endblock content %}
