--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,14 +4,22 @@
         <a href="index.html"><img src="{% static 'images/logo.png' %}" alt="logo" width="125px"></a>
     </div>
     <nav>
+
         <ul id="MenuItems">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'list_product' %}">Products</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="account.html">Account</a></li>
+            {% if not user.is_authenticated %}
+                <li><a href="{% url 'account' %}">Account</a></li>
+            {% else %}
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+            {% endif %}
         </ul>
+
     </nav>
-    <a href="cart.html"><img src="{% static 'images/cart.png' %}" width="30px" height="30px"></a>
+    {% if  user.is_authenticated %}
+
+    <a href="{% url 'cart' %}"><img src="{% static 'images/cart.png' %}" width="30px" height="30px"></a>
+
+    {% endif %}
     <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
 </div>
