Final commit: Updated orders and themes, added media files, and adjusted templates

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="navbar">
     <div class="logo">
-        <a href="index.html"><img src="{% static 'images/logo.png' %}" alt="logo" width="125px"></a>
+        <a href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="logo" width="125px"></a>
     </div>
     <nav>
 
